deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amps-demo
  labels:
    app.kubernetes.io/part-of: amps
